2011-06-18  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Source/NSObject.m: fix for clang
	* SSL/GNUmakefile: don't link libobjc ... depend on gnustep-make

2011-06-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: Fix problem parsing space at end of attributes.

2011-06-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Source/NSObject.m:
	* configure.ac: Backport atomic operation retain/release fixes.
	* configure: Regenerate
	* Version: Bump to 1.22.1

2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

        * Source/GSAvahiRunLoopIntegration.m: Declare the local methods in
        the interface.
        Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSDateFormatter.m,
        * Source/NSTimeZone.m,
        * Source/NSCalendar.m: Protect the name id.
        Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

2011-06-09  Richard Frith-Macdonald <rfm@gnu.org>

	* configure: Regenerate
	* config.mak.in:
	* configure.ac:
	* Source/Makefile.preamble:
	* Tools/Makefile.postamble:
	* Tools/Makefile.preamble:
	Add --with-gdomap-port= to specify an alternative port

2011-06-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSLock.m:
	Remove notification observation on dealloc.

2011-06-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSString.m: [(-getLineStart:end:contentsEnd:forRange:)]
	Fix off-by-one error in reported contents end for DOS style lines.

2011-06-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCallBacks.h:
	* Source/NSCallBacks.m:
	* Source/NSConcreteMapTable.m:
	* Source/NSConcreteHashTable.m:
	* Headers/Foundation/NSHashTable.h:
	* Headers/Foundation/NSMapTable.h:
	Backport fix for missing callbacks structure.

2011-06-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: Add more system specific code for guessing
	the timezone.

2011-06-01  Richard Frith-Macdonald <rfm@gnu.org>
